side menu visibility fixed

--- a/src/style/Menu.css
+++ b/src/style/Menu.css
@@ -56,6 +56,7 @@
   margin-right: 8px;
   top: 22px;
   display: none;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1170px) {
