--- a/src/style/SideMenu.css
+++ b/src/style/SideMenu.css
@@ -2,7 +2,6 @@
   position: fixed;
   z-index: 100;
   top: 0px;
-  right: 0px;
   display: flex;
   flex-direction: column;
   width: 190px;
@@ -12,6 +11,15 @@
   background-color: white;
   align-items: start;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: 0.9s;
+}
+
+.side-menu-opened{
+  right: 0px;
+}
+
+.side-menu-closed{
+  right: -200px;
 }
 
 #side-menu-items-div, #side-menu-user-div {
@@ -43,4 +51,11 @@ hr {
   margin: 7px;
   margin-left: 20px;
   cursor: pointer;
+}
+
+@media screen and (min-width: 1190px) {
+  #side-menu {
+    transition: 0s;
+    visibility: hidden;
+  }
 }
